Quartz sync: Aug 13, 2024, 3:33 PM

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,15 @@
 name: Deploy Quartz site to GitHub Pages
-
+ 
 on:
   push:
     branches:
       - v4
-
+ 
 permissions:
-  content: read
+  contents: read
   pages: write
   id-token: write
-
+ 
 concurrency:
   group: "pages"
   cancel-in-progress: false
